--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Cordel  Moderno</h1>
         <p>Por <a href="https://youtu.be/ePPNliWMnoM" target="_blank">Milton Duarte</a></p>
-        <p>SITE: <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">https://www.recantodasletras.com.br/poesias/3186743</a></p>
+       
     </header>
     
     <section class="normal">
@@ -96,7 +96,7 @@
             Deixe que Deus interprete.
         </p>
     </section> 
-
+    <p>Fonte: <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">https://www.recantodasletras.com.br/poesias/3186743</a></p>
     <footer><p>Site criado por <a href="https://www.linkedin.com/feed/" target="_blank">Bruno César</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo/videos" target="_blank">Curso em video</p></a></footer>
 </body>
 </html>
